# slaModernPro

./: .gitignore  FILES_OVERVIEW.txt  README.md  pyproject.toml  requirements.txt  slaModern.code-workspace
src/sla_modern_pro/: __init__.py  cli.py  client.py  report.py  web.py
src/sla_modern_pro/static/: styles.css
src/sla_modern_pro/templates/: index.html
tests/: test_report.py
